// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Delete Modal component > renders loading modal 1`] = `
<DocumentFragment>
  <ods-modal
    color="warning"
    is-open="true"
  >
    <div
      class="flex flex-col gap-4"
    >
      <ods-text
        preset="heading-3"
      >
        Résilier mon Service ?
      </ods-text>
      <ods-text
        preset="paragraph"
      >
        La résiliation de votre service effacera définitivement toutes les données correspondantes. Souhaitez-vous procéder à la résiliation de votre service ?
      </ods-text>
      <div
        class="flex justify-end gap-2"
      >
        <ods-button
          color="primary"
          data-testid="manager-delete-modal-cancel"
          label="Non, refuser"
          slot="actions"
          variant="ghost"
        />
        <ods-button
          data-testid="manager-delete-modal-confirm"
          is-loading="true"
          label="Oui, résilier"
          slot="actions"
        />
      </div>
    </div>
  </ods-modal>
</DocumentFragment>
`;

exports[`Delete Modal component > renders loading modal 2`] = `
<DocumentFragment>
  <ods-modal
    class="ods-modal ods-modal--open"
    color="warning"
    is-dismissible=""
    is-open="true"
  >
    <div
      class="flex flex-col gap-4"
    >
      <ods-text
        class="ods-text"
        preset="heading-3"
      >
        Résilier mon serviceType ?
      </ods-text>
      <ods-text
        class="ods-text"
        preset="paragraph"
      >
        La résiliation de votre service effacera définitivement toutes les données correspondantes. Souhaitez-vous procéder à la résiliation de votre service ?
      </ods-text>
      <div
        class="flex justify-end gap-2"
      >
        <ods-button
          class="ods-button ods-button--md"
          color="primary"
          data-testid="manager-delete-modal-cancel"
          icon-alignment="left"
          label="Non, refuser"
          size="md"
          slot="actions"
          type="button"
          variant="ghost"
        />
        <ods-button
          aria-disabled="true"
          class="ods-button ods-button--md"
          color="primary"
          data-testid="manager-delete-modal-confirm"
          disabled=""
          icon-alignment="left"
          internals-disabled=""
          is-loading="true"
          label="Oui, résilier"
          size="md"
          slot="actions"
          type="button"
          variant="default"
        />
      </div>
    </div>
  </ods-modal>
</DocumentFragment>
`;
